bug(UI): fix back button alignment
- fix alignment for back button

[Fixes #158027824]

--- a/UI/css/base.css
+++ b/UI/css/base.css
@@ -175,7 +175,7 @@ a{
 	}
 }
 
-.back {
+.back > * {
 	line-height: 38px;
 	margin-left: 20px;
 	font-size: 1em;
